@@ -2,6 +2,7 @@ Revision history for Perl extension Finance-Robinhood
 
 {{$NEXT}}
 
+    - 'next' and 'previous' keys were getting messed up in paginated results
     - Various minor, nondescript fixes
 
 0.14 2016-12-28T04:08:26Z
